--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_participances.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_participances.html
@@ -16,7 +16,7 @@
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
 			<li><a href="/apps/">百宝箱</a></li>
-			<li><a href="/apps/shvote/shvotes/">上海投票</a></li>
+			<li><a href="/apps/shvote/shvotes/">高级投票</a></li>
 			<li class="active">查看结果</li>
 		</ul>
 	</div>
