--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvotes.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvotes.html
@@ -6,7 +6,7 @@
 		<ul class="breadcrumb">
 			<li>您当前所在位置</li>
 			<li><a href="/apps/">百宝箱</a></li>
-			<li class="active">上海投票</li>
+			<li class="active">高级投票</li>
 		</ul>
 	</div>
 
@@ -70,7 +70,7 @@
 	<div class="panel panel-default xui-tableBox">
 		<div class="panel-header clearfix">
 			<a href="/apps/shvote/shvote/" class="btn btn-success fr">
-				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建上海投票
+				<span class="xui-plusBoldermr5 xui-plus-sign pr" style="">+</span> 新建高级投票
 			</a>
 		</div>
 
