--- a/weapp/apps/customerized_apps/shvote/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/workbench.html
@@ -20,7 +20,7 @@
     <ul class="breadcrumb">
       <li>您当前所在位置</li>
       <li><a href="/termite2/pages/">百宝箱</a></li>
-      <li><a href="/apps/shvote/shvotes/">上海投票</a></li>
+      <li><a href="/apps/shvote/shvotes/">高级投票</a></li>
       <li class="active">新建投票</li>
     </ul>
   </div>
