分组为空时候的处理

--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
@@ -136,7 +136,7 @@
                 <div class="wui-DropDownBox">
                     <div class="wui-i-inputContainer xa-inputControl">
                         <a class="group_type" data-role="button">
-                            <span class="type_name" data-product="" data-validate="require-notempty-span::请选择分组" style="width: 953px;">请选择分组</span>
+                            <span class="type_name" data-product="" data-validate="require-notempty-span::请选择分组" style="width: 953px;"></span>
                             <span class="icon arrow_down"></span>
                         </a>
                         <div class="xui-dropmenu" style="transform-origin: 0px 0px 0px; opacity: 1; transform: scale(1, 1); display: none;">
