--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
@@ -121,7 +121,7 @@
 				<td>
 					${item.serial_number}
 				</td>
-				<td>
+				<td class="item_status" item_status= ${item.status}>
 					{{if (item.status === 0)}}
 						待审核
 					{{/if}}
@@ -233,6 +233,15 @@ $(document).ready(function() {
 	$('.xa-batchReview').click(function(event) {
 		var table = $('div[data-ui-role="advanced-table"]').data('view');
 		var ids = table.getAllSelectedDataIds();
+		for(var index in ids){
+			var id = ids[index];
+			var $tr = $('div[data-ui-role="advanced-table"]').find("tr[data-id="+id+"]");
+			var item_status = $tr.find("td.item_status").attr('item_status');
+			if(item_status==1){
+				W.showHint('error', '包含已通过审核的选手！');
+				return false;
+			}
+		}
 		if(ids.length==0){
 			W.showHint('error', '请选择选手！');
 			return false;
