--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -248,6 +248,14 @@
 		opacity: 0.5;
 		z-index: 1;
 	}
+    .wui-i-product-description-title{
+        text-align: center;
+        color: #E6E6E6;
+        height: 50px;
+        background: url("/termite_static/img/component/group/detail_bg.png") no-repeat;
+        background-position-y: 90%;
+        background-position-x: 50%;
+    }
 </style>
 {% endblock %}
 
@@ -303,6 +311,7 @@
 			</div>
 		</div>
 	</div>
+	<div class="wui-i-product-description-title pt10"></div>
 </div>
 
 <script type="text/plain" id="tpl">
@@ -351,7 +360,17 @@
         var swiper = new Swiper('.swiper-container', {
         	slidesPerView: 'auto'
    		});
-
+        document.addEventListener('touchstart',function () {
+            var $win = $(window);
+            var $top = $('.wui-i-product-description-title');
+            var rect = $top[0].getBoundingClientRect();
+            var djage = function(){
+                return rect.top<0 || rect.top >= 0 && ($win.height()-rect.top>=0);
+            };
+            if(rect && djage()){
+                showPlayers();
+            }
+        });
 		// 我要报名
 		$('.wa-imark').click(function(){
 			window.location.href = window.location.origin + '/m/apps/shvote/shvote_participance/?webapp_owner_id='+W.webappOwnerId+'&id='+W.appRecordId;
@@ -467,7 +486,9 @@
                 update_record_info(record_info);
                 //更新会员信息
                 var member_info = data.member_info;
-                current_group = $('.active').html();
+                if( $('.active').length == 1){
+                	current_group = $('.active').html();
+                };
                 can_play_info = member_info.can_play_info;
                 update_member_info(member_info,current_group);
                 //更新排名信息
@@ -538,11 +559,19 @@
 	        	}
                 $list.append(tmp_html);
                 loadingStatus();
+              	var players = $('.wa-rank-list > div');
+              	players.each(function(){
+              		$(this).hide();
+              	})
             },
             error: function(data){
 				wuiAlert(data.errMsg);
             }
         });
+    }
+
+    function showPlayers(){
+    	 $('.wa-rank-list > div').show();
     }
 </script>
 {% endblock %}
