提示语修改

--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote_participance.html
@@ -129,7 +129,7 @@
         <div class="wui-i-shvoteParticipance-content">
             <div class="wui-i-shvoteParticipance-content-line">
                 <div class="wui-i-shvoteParticipance-content-lable">名称</div>
-                <input class="wui-i-input wa-name" data-validate="require-notempty::请填写名称" placeholder="输入标题/名称"/>
+                <input class="wui-i-input wa-name" data-validate="require-notempty::请填写名称" placeholder="输入选手姓名/团队名称"/>
             </div>
             <div class="wui-i-shvoteParticipance-content-line wui-i-shvoteParticipance-content-choose-group">
                 <div class="wui-i-shvoteParticipance-content-lable">分组选择</div>
@@ -147,7 +147,7 @@
             </div>
             <div class="wui-i-shvoteParticipance-content-line">
                 <div class="wui-i-shvoteParticipance-content-lable">输入编号</div>
-                <input class="wui-i-input wa-serial" data-validate="require-notempty::请输入编号" placeholder="输入指定编号"/>
+                <input class="wui-i-input wa-serial" data-validate="require-notempty::请输入编号" placeholder="输入报名序号"/>
             </div>
             <div style="padding: 10px 0 0 10px;width: 95%;margin-left: 2%;">
                 <div class="wui-i-shvoteParticipance-content-lable">内容简介</div>
