--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -127,6 +127,16 @@
                                         </a>
                                     </li>
                                		{% endif %}
+                                {% elif third_nav.name == 'shvotes' %}
+                                	{% if request.user.username == 'jierunda' %}
+                                    <li class="xui-sideBar-third {% ifequal third_nav_name third_nav.name %}active_third{% endifequal %}">
+                                        <a href="{{third_nav.url}}" title="{{third_nav.title}}" name="{{third_nav.name}}">
+                                            &nbsp;&nbsp;&nbsp;&nbsp;{{third_nav.title|safe}}
+                                            <i class="xui-icon-arrow"></i>
+                                            {% if third_nav.class_name %}<i class="xui-noticyTip {{third_nav.class_name}}"></i>{% endif %}
+                                        </a>
+                                    </li>
+                               		{% endif %}
                                 {% else %}
                                     <li class="xui-sideBar-third {% ifequal third_nav_name third_nav.name %}active_third{% endifequal %}">
                                         <a href="{{third_nav.url}}" title="{{third_nav.title}}" name="{{third_nav.name}}">
