--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -128,7 +128,7 @@
                                     </li>
                                		{% endif %}
                                 {% elif third_nav.name == 'shvotes' %}
-                                	{% if request.user.username == 'jierunda' %}
+                                	{% if request.user.username == 'jierunda' or request.user.username == 'jobs' %}
                                     <li class="xui-sideBar-third {% ifequal third_nav_name third_nav.name %}active_third{% endifequal %}">
                                         <a href="{{third_nav.url}}" title="{{third_nav.title}}" name="{{third_nav.name}}">
                                             &nbsp;&nbsp;&nbsp;&nbsp;{{third_nav.title|safe}}
