--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -179,12 +179,15 @@
 	.wui-rank-item{
 		width: 48%;
 		float: left;
-		margin-top: 10px;
+		margin-bottom: 10px;
 	}
 	.wui-item-content{
 		padding: 7px;
 		padding-bottom: 0;
 		background: #fff7e7;
+	}
+	.wui-rank-item:nth-child(1),.wui-rank-item:nth-child(2){
+		margin-top: 10px;
 	}
 	.wui-rank-item:nth-child(even){
 		float: right;
@@ -407,11 +410,10 @@
             showDesc();
             return false;
         }
-
+        //返回顶部
         $('.wa-to-top').click(function(){
         	goTop(0.1,1);
         })
-
         document.addEventListener('scroll',function () {
         	var top_dis = $('.wa-rank-list').offset().top;
         	if(document.body.scrollTop > top_dis){
@@ -420,7 +422,7 @@
         		$('.wa-to-top').hide();
         	}
         })
-
+        //上拉加载
         document.addEventListener('touchstart',function(){
         	if($('.wa-rank-list div:hidden').length == 0){
         		$('.wa-loading-more').hide();
