--- a/weapp/mall/templates/mall/editor/offshelf_products.html
+++ b/weapp/mall/templates/mall/editor/offshelf_products.html
@@ -135,9 +135,13 @@
 						<ul></td>
 					<td>
 						{{if product.is_use_custom_model}}
-						${product.display_price_range}
+						<div class="xa-priceText">${product.display_price_range}</div>
+						<div><a href="javascript:void(0);" class="xa-modifyCustomModelPrice">修改</a></div>
 						{{else}}
-						${product.display_price}
+						<div class="xa-priceText">${product.display_price}</div>
+						<input class="xa-priceInput xui-hide" style="width: 35%;" data-validate="require-price"/>
+						<div class="errorHint" data-error-hint="请输入正确的价格"></div>
+						<div><a href="javascript:void(0);" class="xa-modifyStandardModelPrice">修改</a></div>
 						{{/if}}
 					</td>
 					<td>
