--- a/weapp/static_v2/css/mall_product.css
+++ b/weapp/static_v2/css/mall_product.css
@@ -1271,7 +1271,19 @@
 	bottom: 0;
 	right: 0;
 }
-
+/*在售商品管理，多规格修改商品价钱弹窗*/
+.xui-updateProductModelPriceDialog .modal-dialog{
+	width: 500px;
+	height: 388px;
+	position: absolute;
+	top:50%;
+	left: 50%;
+	margin-top: -250px;
+	margin-left: -194px;	
+}
+.xui-updateProductModelPriceDialog thead{
+	background: #C8D1E4!important;
+}
 /*
 *评价管理页面
 */
