--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -269,8 +269,9 @@
 		z-index: 1;
 	}
 	.wui-loading-more{
-		height: 50px;
-		line-height: 50px;
+		font-size: .9rem;
+		height: 30px;
+		line-height: 30px;
 		text-align: center;
 		background: #ffe145;
 		color: #ff4200;
@@ -285,6 +286,7 @@
    	 	position: relative;
     	width: 22%;
     	margin: 0 auto;
+     	font-family: '黑体';
 	}
 	.wui-loading-more div{
     	position: absolute;
