--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -652,7 +652,7 @@
         			$('.wa-loading-more').show();
        			}
        			if($('.wa-rank-list > div').length == 0){
-					wuiAlert('当前分组没有选手');
+					wuiAlert('暂无选手参与');
 				}
                 loadingStatus();
             },
