--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_create_player.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_create_player.html
@@ -157,9 +157,7 @@
 		{% endif %}
 		<div class="form-group">
 			<label class="control-label" for="details">详情</label>
-			<textarea class="wui-details" id="details" name="details" readonly>
-				{{cur_player_info.details}}
-			</textarea>
+			<textarea class="wui-details" id="details" name="details" readonly>{{cur_player_info.details}}</textarea>
 		</div>
 		<div class="form-group wui-upload-img-div">
 			<label class="control-label fl" for="swipe_images_des">上传图片</label>
